fix contact on mobile

--- a/assets/less/app/context/desktop.less
+++ b/assets/less/app/context/desktop.less
@@ -50,9 +50,4 @@
 			}
 		}
 	}
-
-	.snippet h1 {
-		font-size: 16px;
-	}
-
 }
