--- a/assets/less/app/context/mobile.less
+++ b/assets/less/app/context/mobile.less
@@ -62,6 +62,14 @@
   overflow: hidden;
 }
 
-article {
-  margin-top: 60px;
+.snippet .media-body section, .snippet .media-body aside {
+  padding: 15px 5px;
+}
+
+.navbar .nav-tabs li.active a {
+  background-color: #FFFFFF;
+}
+
+.snippet-list {
+  padding-right: 5px;
 }
