--- a/assets/less/components/snippet.less
+++ b/assets/less/components/snippet.less
@@ -103,5 +103,9 @@
       }
     }
   }
+
+ .media-body section, .media-body aside {
+    padding: 15px 5px;
+  }
 }
 
